test-files/cmd/quick/BadJavaScriptTranslation.sh.stdout
11:34:16.877 STATUS ...pp/hoot/core/util/Progress.cpp(  81) Convert (0%): Converting ...les/jakarta_raya_coastline.shp to ...k/BadJavaScriptTranslation.osm...
11:34:16.889 STATUS ...pp/hoot/core/util/Progress.cpp( 110) Convert (0%): Loading map: ...les/jakarta_raya_coastline.shp...
Initialize works!
11:34:16.900 ERROR  ...JavaScriptSchemaTranslator.cpp( 304) Error initializing JavaScript: Function call 'initialize' returned an error.
11:34:17.223 STATUS ...pp/hoot/core/util/Progress.cpp(  81) Convert (0%): Converting ...les/jakarta_raya_coastline.shp to ...k/BadJavaScriptTranslation.osm...
11:34:17.234 STATUS ...pp/hoot/core/util/Progress.cpp( 110) Convert (0%): Loading map: ...les/jakarta_raya_coastline.shp...
11:34:17.245 ERROR  ...JavaScriptSchemaTranslator.cpp( 304) Error initializing JavaScript: translations/BadSyntaxTest.js:4: SyntaxError: Unexpected identifier
foo is bad.
    ^^
SyntaxError: Unexpected identifier
11:34:17.637 STATUS ...pp/hoot/core/util/Progress.cpp(  81) Convert (0%): Converting ...les/jakarta_raya_coastline.shp to ...k/BadJavaScriptTranslation.osm...
11:34:17.648 STATUS ...pp/hoot/core/util/Progress.cpp( 110) Convert (0%): Loading map: ...les/jakarta_raya_coastline.shp...
11:34:17.658 ERROR  ...JavaScriptSchemaTranslator.cpp( 304) Error initializing JavaScript: translations/BadSyntaxTest.js:4: SyntaxError: Unexpected identifier
foo is bad.
    ^^
SyntaxError: Unexpected identifier
    at test-files/cmd/quick/BadRequire.js:32:6
